feat(products): add column trakteer_link for table products and update related field in backend and frontend
